--- a/testimonials-grid-section-main/css/style.css
+++ b/testimonials-grid-section-main/css/style.css
@@ -30,6 +30,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .jeanette-col{
     background-color: var(--White);
+    box-shadow: 3px 5px 10px hsl(219, 29%, 14%,.3);
 }
 .jeanette-col .content-title{
     opacity: .7;
@@ -40,6 +41,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .kira-col{
     background-color: var(--White);
+    box-shadow: 3px 5px 10px hsl(219, 29%, 14%,.3);
 }
 .kira-col .content-title{
     opacity: .7;
